Fix title text overflow on mobile device

--- a/src/assets/text-effect.scss
+++ b/src/assets/text-effect.scss
@@ -4,7 +4,7 @@
     display: inline-block;
     border-width: 4px 0;
     padding: 1.5em 0em;
-    width: 40em;
+    // width: 40em;
 
     h1 {
         font: 700 4em/1 "Oswald", sans-serif;
